--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,23 +6,12 @@ body {
   color: #e0e0e0;
 }
 
-#gameCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
 #app {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
-  pointer-events: none;
-}
-
-#app > * {
-  pointer-events: auto;
+  width: 100%;
+  height: 100vh;
 }
 
 button {
